<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        style="@style/TextAppearance.WayToFix.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_title"
        android:textColor="@color/text_primary" />

    <TextView
        style="@style/TextAppearance.WayToFix.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/return_subtitle"
        android:textColor="@color/text_secondary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReturnContinue"
        style="@style/Widget.WayToFix.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/return_continue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReturnRestart"
        style="@style/Widget.WayToFix.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/return_restart_week" />

</LinearLayout>
