<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:id="@+id/tvReplaceTitle"
        style="@style/TextAppearance.WayToFix.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replace_exercise_title"
        android:textColor="@color/text_primary" />

    <EditText
        android:id="@+id/inputReplaceSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/search_exercise"
        android:inputType="text"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint" />

    <TextView
        android:id="@+id/tvReplaceEasierLabel"
        style="@style/TextAppearance.WayToFix.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/replace_easier"
        android:textColor="@color/text_secondary" />

    <LinearLayout
        android:id="@+id/layoutReplaceEasier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_xs" />

    <TextView
        android:id="@+id/tvReplaceSimilarLabel"
        style="@style/TextAppearance.WayToFix.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/replace_similar"
        android:textColor="@color/text_secondary" />

    <LinearLayout
        android:id="@+id/layoutReplaceSimilar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_xs" />

    <TextView
        android:id="@+id/tvReplaceHarderLabel"
        style="@style/TextAppearance.WayToFix.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/replace_harder"
        android:textColor="@color/text_secondary" />

    <LinearLayout
        android:id="@+id/layoutReplaceHarder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_xs" />

    <TextView
        android:id="@+id/btnEditDetails"
        style="@style/TextAppearance.WayToFix.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/replace_edit_details"
        android:textColor="@color/primary" />

</LinearLayout>
