<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvProgramsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programs"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_lg"
        android:layout_marginTop="@dimen/spacing_lg" />

    <TextView
        android:id="@+id/tvProgramsSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/programs_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvProgramsTitle"
        app:layout_constraintStart_toStartOf="@id/tvProgramsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_lg" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBrowsePrograms"
        style="@style/Widget.WayToFix.Button.Primary"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/browse_programs"
        app:layout_constraintTop_toBottomOf="@id/tvProgramsSubtitle"
        app:layout_constraintStart_toStartOf="@id/tvProgramsTitle"
        android:layout_marginTop="@dimen/spacing_lg" />

</androidx.constraintlayout.widget.ConstraintLayout>
